fixed weird misalignment issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,7 +68,6 @@ video {
     border: 0;
     outline: 0;
     font-size: 100%;
-    vertical-align: baseline;
     background: transparent;
 }
 
@@ -93,7 +92,6 @@ a {
     margin: 0;
     padding: 0;
     font-size: 100%;
-    vertical-align: baseline;
     background: transparent;
     text-decoration: none;
 }
@@ -122,7 +120,7 @@ select {
 /*-----END RESET CODE----- */
 
 
-/*-----------------------GENERAL STYLES --------------------------*/
+/*----------------#GENERALSTYLES---------------*/
 
 html,
 body {
@@ -175,7 +173,6 @@ header .header-brand {
 
 header nav ul {
     display: block;
-    margin: 0 auto;
     width: fit-content;
     margin: 20px 0px 0px 20px;
 }
@@ -246,7 +243,6 @@ header nav ul li a {
     }
     header nav ul li {
         display: inline-block;
-        float: left;
         list-style: none;
         padding: 0 16px;
     }
@@ -256,6 +252,7 @@ header nav ul li a {
         font-size: 16px;
         color: #222;
         text-decoration: none;
+        line-height: 1;
     }
 }
 
